[build-system]
requires = ["scikit-build-core >=0.10", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[project]
name = "pymona"
version = "0.0.8"
description = "Python bindings for the MONA WS1S/WS2S solver"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Neta Elad", email = "netaelad@mail.tau.ac.il" },
]

[project.urls]
Homepage = "https://github.com/neta-elad/pymona"

[project.optional-dependencies]
dev = [
    "autoflake==2.3.1",
    "black==24.10.0",
    "isort==5.13.2",
    "mypy==1.14.1",
    "pytest==8.3.4",
]


[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "build-system.requires"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1

# Run pytest to ensure that the package was correctly built
test-command = "pytest {project}/tests"
test-requires = "pytest"

# Needed for full C++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"